fixed spacing problem and centered see product link

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -21,6 +21,10 @@
         }
     }
     .content {
+        .items-container {
+            margin-top: 110px;
+
+        }
         min-height: 600px;
         background-image: url("/assets/home/mobile/image-header.jpg");
         background-position: center;
@@ -28,16 +32,19 @@
         background-size: cover;
         position: relative;
         // text spacing
+        .item {
+            margin-bottom: 36px;
+        }
         h2 {
             /* NEW PRODUCT */
 
             /* NEW PRODUCT */
 
-            position: absolute;
-            height: 19px;
-            left: 19.82%;
-            right: 19.51%;
-            top: 201px;
+            // position: absolute;
+            // height: 19px;
+            // left: 19.82%;
+            // right: 19.51%;
+            // top: 201px;
 
             font-family: 'Manrope';
             font-style: normal;
@@ -57,12 +64,12 @@
         }
         h3 {
             /* XX99 Mark II Headpho */
-            position: absolute;
-            height: 80px;
-            left: 0%;
-            right: 0%;
-            // top: calc(50% - 80px/2 - 70px);
-            top: 230px;
+            // position: absolute;
+            // height: 80px;
+            // left: 0%;
+            // right: 0%;
+            // // top: calc(50% - 80px/2 - 70px);
+            // top: 230px;
 
             font-family: 'Manrope';
             font-style: normal;
@@ -78,12 +85,12 @@
         }
         p {
           /* Experience natural, */
-            position: absolute;
-            left: 0%;
-            right: 0%;
-            // top: 53.93%;
-            top: 356px;
-            bottom: 26.21%;
+            // position: absolute;
+            // left: 0%;
+            // right: 0%;
+            // // top: 53.93%;
+            // top: 356px;
+            // bottom: 26.21%;
 
             font-family: 'Manrope';
             font-style: normal;
@@ -100,36 +107,17 @@
 
         }
         .see-product-link {
-            // display: block;
-            /* Group */
-
-            position: absolute;
-            left: 25.91%;
-            right: 25.3%;
-            // top: 83.79%;
-            top: 448px;
-            // bottom: -0.34%;
-
-
-
-            /* Rectangle */
-
             // position: absolute;
-            // left: 0%;
-            // right: 0%;
-            // top: 0%;
-            // bottom: 0%;
+            // left: 25.91%;
+            // right: 25.3%;
+            display: block;
+            box-sizing: border-box;
+            margin: auto;
+            width: 12rem;
+            padding: 15px 15px;
+
 
             background: #D87D4A;
-
-
-            /* See Product */
-
-            // position: absolute;
-            // height: 18px;
-            // left: 19.69%;
-            // right: 18.44%;
-            // top: calc(50% - 18px/2);
 
             font-family: 'Manrope';
             font-style: normal;
@@ -139,27 +127,10 @@
             /* identical to box height */
             letter-spacing: 1px;
             text-transform: uppercase;
-
-            // width: 160px;
-            height: 48px;
-            // text-decoration: none;
             text-align: center;
-
-            // font-family: 'Manrope';
-            font-style: normal;
-            font-weight: 700;
-            font-size: 13px;
-            line-height: 18px;
-            /* identical to box height */
             text-decoration: none;
-
             letter-spacing: 1px;
-            text-transform: uppercase;
-            box-sizing: border-box;
-
             color: #FFFFFF;
-
-
         }
     }
 }
